<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="settings">Settings</string>
	<string name="register">Register</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
    <string name="app_name">Chess4Chewy</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="game_list">Game List</string>
    <string name="current_game">Current Game</string>
    <string name="move_list">Move List</string>
    <string name="new_game">New Game</string>
    <string name="my_games">My Games</string>
    <string name="refresh">Refresh</string>
    <string name="open_public_games">Open Games</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logo">logo</string>
    <string name="resign">Resign</string>
    <string name="draw">Draw</string>
    <string name="no_move">--</string>
    <string-array name="colors">
		<item>Random</item>
		<item>White</item>
		<item>Black</item>
	</string-array>
	<string-array name="privacy">
		<item>Public</item>
		<item>Private</item>
	</string-array>
</resources>