<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/username" />
	    <EditText
	        android:id="@+id/username"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:inputType="textNoSuggestions"/>
    </LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/password" />

	    <EditText
	        android:id="@+id/password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword" />

    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <Button
	        android:id="@+id/register"
	        android:text="@string/register"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	    <TextView
	        android:id="@+id/is_registered"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
	
</LinearLayout>
